--- a/src/main/webapp/WEB-INF/views/boards/update.jspx
+++ b/src/main/webapp/WEB-INF/views/boards/update.jspx
@@ -3,6 +3,8 @@
     <jsp:directive.page contentType="text/html;charset=UTF-8"/>
     <jsp:output omit-xml-declaration="yes"/>
     <form:update id="fu_seis_stthomas_edu_domain_Board" modelAttribute="board" path="/boards" versionField="Version" z="kQK1D3sm9ARMNYY7uVvhgmpdXes=">
-        <field:select field="game" id="c_seis_stthomas_edu_domain_Board_game" itemValue="id" items="${games}" path="/games" z="LhPKl2cJWFd3KXCXUacUZpqh908="/>
+        <field:input field="game" id="c_seis_stthomas_edu_domain_Board_game" z="B0vg8tHj6KcUwHA2sYQtwBwb8Ao="/>
+        <field:input field="pieces" id="c_seis_stthomas_edu_domain_Board_pieces" z="X0xn2Wsvzmi581G7org2WkyrJYs="/>
+        <field:input field="squareInRange" id="c_seis_stthomas_edu_domain_Board_squareInRange" z="EAxs+n9cgqVcEzhY48HpTP4ZgUA="/>
     </form:update>
 </div>
